--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,12 @@
   * {
     @apply border-border antialiased;
   }
+
+  html {
+    @apply h-full;
+  }
+
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground h-full;
   }
 }
